# speex4j

./: .gitignore  LICENSE  README.md  makefile  pom.xml
.dist/: a.out
src/main/java/com/orctom/speex4j/: Bytes.java  Mode.java  NativeUtils.java  OS.java  OSUtils.java  SamplingRate.java  Speex.java  SpeexCodec.java  SpeexDecoder.java  SpeexEncoder.java  SpeexOptions.java  SpeexUtils.java
src/main/jni/: CMakeLists.txt  build_linux.sh  build_mac.sh  com_orctom_speex4j_SpeexCodec.c  com_orctom_speex4j_SpeexCodec.h  com_orctom_speex4j_SpeexDecoder.c  com_orctom_speex4j_SpeexDecoder.h  com_orctom_speex4j_SpeexEncoder.c  com_orctom_speex4j_SpeexEncoder.h  commons.c  commons.h  slots.c  slots.h  speex.dylib
src/main/jni/speex-1.2.0/lib/: libspeex.dylib
src/main/resources/: libspeexcodec.dylib
src/main/resources/darwin/: libspx.dylib
src/test/java/com/orctom/speex4j/: SpeexCodecTest.java  SpeexDecoderIT.java  SpeexDecoderTest.java  SpeexEncoderIT.java  SpeexEncoderTest.java  SpeexUtilsIT.java
src/test/resources/: logback.xml  sample.pcm  sample.spx
